--- a/maroc_ensa.html
+++ b/maroc_ensa.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>HACKATHON-MAROC</title>
+		<title>ENSA Khouribga</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,8 +19,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="maroc.html" class="active">MAROC</a></li>
-						<li><a href="maroc_ensa.html">ENSA de Khouribga</a></li>
+						<li><a href="maroc.html">MAROC</a></li>
+						<li><a href="maroc_ensa.html" class= "active">ENSA de Khouribga</a></li>
 						<li><a href="maroc_aui.html">Al Akhawayn University</a></li>
 						<li><a href="maroc_hcp.html">HCP MAROC</a></li>
 					</ul>
@@ -30,12 +30,12 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- MAROC -->
+				<!-- Main -->
 					<section id="maroc" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
-								        Maroc Effect  
+								        ENSA Effect  
 								=========================-->
 								<section>
         							<div class="content">
@@ -43,7 +43,7 @@
                 							<!-- Symbol -->
                									 <symbol id="s-text">
                									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        								maroc
+                        								ensa
                									     </text>
                									 </symbol>
 									
@@ -58,7 +58,7 @@
         							</div>
         						</section>
         						<!--======================
-								        End Maroc Effect  
+								        End ENSA Effect  
 								=========================-->
 
     						</h1>
@@ -67,7 +67,6 @@
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 						</div>
 					</section>
-
 
 			</div>
 
