--- a/maroc_hcp.html
+++ b/maroc_hcp.html
@@ -19,10 +19,10 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="maroc.html" class="active">MAROC</a></li>
+						<li><a href="maroc.html">MAROC</a></li>
 						<li><a href="maroc_ensa.html">ENSA de Khouribga</a></li>
 						<li><a href="maroc_aui.html">Al Akhawayn University</a></li>
-						<li><a href="maroc_hcp.html">HCP MAROC</a></li>
+						<li><a href="maroc_hcp.html" class="active">HCP MAROC</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -30,20 +30,20 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- MAROC -->
+				<!-- Main -->
 					<section id="maroc" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
-								        Maroc Effect  
+								        HCP Effect  
 								=========================-->
 								<section>
         							<div class="content">
-            							<svg viewBox="0 0 2200 800">
+            							<svg viewBox="0 0 3800 800">
                 							<!-- Symbol -->
                									 <symbol id="s-text">
                									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        								maroc
+                        								HCP MAROC
                									     </text>
                									 </symbol>
 									
@@ -58,7 +58,7 @@
         							</div>
         						</section>
         						<!--======================
-								        End Maroc Effect  
+								        End HCP Effect  
 								=========================-->
 
     						</h1>
@@ -67,7 +67,6 @@
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 						</div>
 					</section>
-
 
 			</div>
 
