--- a/maroc.html
+++ b/maroc.html
@@ -22,7 +22,7 @@
 						<li><a href="maroc.html" class="active">MAROC</a></li>
 						<li><a href="maroc_ensa.html">ENSA de Khouribga</a></li>
 						<li><a href="maroc_aui.html">Al Akhawayn University</a></li>
-						<li><a href="maroc_hcp.html">HCP MAROC</a></li>
+						<li><a href="maroc_hps.html">HPS MAROC</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -31,7 +31,7 @@
 			<div id="wrapper">
 
 				<!-- MAROC -->
-					<section id="maroc" class="wrapper">
+					<section id="up" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
