--- a/maroc_hps.html
+++ b/maroc_hps.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>HACKATHON-MAROC</title>
+		<title>HPS MAROC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 						<li><a href="maroc.html">MAROC</a></li>
 						<li><a href="maroc_ensa.html">ENSA de Khouribga</a></li>
 						<li><a href="maroc_aui.html">Al Akhawayn University</a></li>
-						<li><a href="maroc_hcp.html" class="active">HCP MAROC</a></li>
+						<li><a href="maroc_hps.html" class="active">HPS MAROC</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -30,12 +30,12 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Main -->
-					<section id="maroc" class="wrapper">
+				<!-- HPS MAROC -->
+					<section id="up" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
-								        HCP Effect  
+								        HPS Effect  
 								=========================-->
 								<section>
         							<div class="content">
@@ -43,7 +43,7 @@
                 							<!-- Symbol -->
                									 <symbol id="s-text">
                									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        								HCP MAROC
+                        								HPS MAROC
                									     </text>
                									 </symbol>
 									
@@ -58,11 +58,11 @@
         							</div>
         						</section>
         						<!--======================
-								        End HCP Effect  
+								        End HPS Effect  
 								=========================-->
 
     						</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic08.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 						</div>
