--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2><a href="international.html">Silicon Valley &#9754;</a></h2>
-									<p style="font-size: 24px;">La oû tout à commencer et continu &Sigma;.</p>
+									<p style="font-size: 24px;">La où tout à commencer et continu &Sigma;.</p>
 									<ul class="actions">
 										<li><a href="international.html" class="button">Lets Go! &#10004;</a></li>
 									</ul>
@@ -130,7 +130,7 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
+			<footer id="footer" class="wrapper" style="background-image: linear-gradient(to left, #614385 , #516395);">
 				<div class="inner">
 					<ul class="menu">
 						<p style= "text-align: center; color:white; font-size: 20px;">Made with <span style="color: red; font-size: 30px;">&hearts;</span> by Omar M'HAIMDAT &amp; Nouamane MAJD</p>
