--- a/maroc.html
+++ b/maroc.html
@@ -31,7 +31,7 @@
 			<div id="wrapper">
 
 				<!-- MAROC -->
-					<section id="up" class="wrapper">
+					<section id="up" class="wrapper maroc fade-up">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
