--- a/international.html
+++ b/international.html
@@ -32,14 +32,14 @@
 			<div id="wrapper">
 
 				<!-- MAROC -->
-					<section id="up" class="wrapper">
+					<section id="up" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
 								   Silicon Valley Effect  
 								=========================-->
 								<section>
-        							<div class="content">
+        							<div class="content ">
             							<svg viewBox="0 0 5000 800">
                 							<!-- Symbol -->
                									 <symbol id="s-text">
