--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</head>
 	<body>
 
+ 
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
@@ -90,7 +91,7 @@
 				<!-- exemples -->
 					<section id="exemples" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="international.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2><a href="international.html">Silicon Valley &#9754;</a></h2>
@@ -102,7 +103,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
+							<a href="maroc.html" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2><a href="maroc.html">Le Maroc &#9754;</a></h2>
